--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Browser helpers package",
   "scripts": {
     "build": "tsc",
-    "test": "karma start"
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "test": "npm run lint && karma start"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-typescript": "^3.0.12",
     "mocha": "^5.0.1",
+    "tslint": "^5.9.1",
     "typescript": "^2.7.2"
   },
   "directories": {
