--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "dd-browser",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "Browser helpers package",
   "scripts": {
     "build": "npm run lint && npm run test && npm run docs && tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "npm run lint && karma start",
+    "test": "karma start --no-auto-watch --single-run --browsers PhantomJS",
+    "test-debug": "karma start",
     "docs": "typedoc --out docs/ src/ --module commonjs --exclude **/*.spec.ts --mode modules"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "chai": "^4.1.2",
     "karma": "^2.0.0",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
