--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "2.0.0",
   "description": "Browser helpers package",
   "scripts": {
-    "build": "npm run lint && npm run test && npm run docs && tsc",
+    "build": "npm run lint && npm run test && npm run clean && npm run docs && tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "karma start --no-auto-watch --single-run --browsers PhantomJS",
     "test-debug": "karma start",
-    "docs": "typedoc --out docs/ src/ --module commonjs --exclude **/*.spec.ts --mode modules"
+    "docs": "typedoc --out docs/ src/ --module commonjs --exclude **/*.spec.ts --mode modules && npm run nojekyll",
+    "nojekyll": "type nul > docs/.nojekyll",
+    "clean": "rimraf dist && rimraf docs"
   },
   "repository": {
     "type": "git",
@@ -39,8 +41,10 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-typescript": "^3.0.12",
     "mocha": "^5.0.1",
+    "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "typedoc": "^0.11.1",
+    "typescript": "^2.9.2"
   },
   "directories": {
     "lib": "dist"
